--- a/app/views/user_mailer/invite_notification.html.erb
+++ b/app/views/user_mailer/invite_notification.html.erb
@@ -1,7 +1,7 @@
 <%=h @host.nickname%>邀请你使用WeFootball！
 
 <%if !@message.blank?%>
-  这里是<%=@host.nickname%>给你的留言:<%=h @message%>
+  这里是<%=h @host.nickname%>给你的留言:<%=h @message%>
 <%end%>
 <%=h @host.nickname%>的WeFootball的页面为: <%=@host_url%>
 
