--- a/app/views/plays/players.html.erb
+++ b/app/views/plays/players.html.erb
@@ -1,5 +1,5 @@
 <div id="wide_left_content" class="sect">
-  <h2><%=link_to @title, play_path(@play)%>的人</h2>
+  <h2><%=h(@title)%></h2>
   <%= user_icon(@players)%>
 </div>
 
