--- a/app/views/sidebar_menus/_team_view_match_users.html.erb
+++ b/app/views/sidebar_menus/_team_view_match_users.html.erb
@@ -11,7 +11,7 @@
     > <%= link_to "返回比赛", match_path(@match) %>
   </li>
   <li>
-    > <%= link_to "返回#{@team.shortname}首页", team_view_path(@team) %>
+    > <%= link_to "返回#{h @team.shortname}首页", team_view_path(@team) %>
   </li>
 </ul>
 
