--- a/app/views/team_joins/admin_management.html.erb
+++ b/app/views/team_joins/admin_management.html.erb
@@ -14,7 +14,7 @@
             <%=link_to("不再担任管理员",team_join_path(ut, "ut[is_admin]" => false, 
                 :back_uri => request.request_uri),:method=>:put) if ut.can_degree_as_common_user_by?(current_user)%>
             <br/><br/>
-            <%=link_to("逐出球队",team_join_path(ut, :back_uri => request.request_uri),:method=>:delete) if ut.can_destroy_by?(current_user)%>
+            <%=link_to("逐出球队",team_join_path(ut, :back_uri => request.request_uri),:method=>:delete, :confirm => '真的要把这个用户逐出球队吗？') if ut.can_destroy_by?(current_user)%>
           <%end%>
         </div>
       </div>
@@ -31,7 +31,7 @@
           <%=link_to("提升为管理员",team_join_path(ut, "ut[is_admin]" => true, 
               :back_uri => request.request_uri),:method=>:put) if ut.can_promote_as_admin_by?(current_user)%>
           <br/><br/>
-          <%=link_to("逐出球队",team_join_path(ut, :back_uri => request.request_uri),:method=>:delete) if ut.can_destroy_by?(current_user)%>
+          <%=link_to("逐出球队",team_join_path(ut, :back_uri => request.request_uri),:method=>:delete, :confirm => '真的要把这个用户逐出球队吗？') if ut.can_destroy_by?(current_user)%>
         </div>
       </div>
     <%end%>
