--- a/app/views/match_joins/edit.html.erb
+++ b/app/views/match_joins/edit.html.erb
@@ -1,9 +1,9 @@
 <%content_for(:javascript) do%>
-  <%= javascript_include_tag "ui.mouse.js" %>
-  <%= javascript_include_tag "ui.draggable.js" %>
-  <%= javascript_include_tag "ui.draggable.ext.js" %>
-  <%= javascript_include_tag "ui.droppable.js" %>
-  <%= javascript_include_tag "ui.droppable.ext.js" %>
+  <%= javascript_include_tag "jquery-1.2.3/ui.mouse.js" %>
+  <%= javascript_include_tag "jquery-1.2.3/ui.draggable.js" %>
+  <%= javascript_include_tag "jquery-1.2.3/ui.draggable.ext.js" %>
+  <%= javascript_include_tag "jquery-1.2.3/ui.droppable.js" %>
+  <%= javascript_include_tag "jquery-1.2.3/ui.droppable.ext.js" %>
   <%= javascript_include_tag "formation.js" %>
 <%end%>
 
