--- a/app/views/posts/_post_list.html.erb
+++ b/app/views/posts/_post_list.html.erb
@@ -20,7 +20,7 @@
         <%= "&nbsp;"%>
       <%end%>
     </td>
-    <td><%=link_to h(post.title), post  %></td>
+    <td><%=link_to h(post.title), post  %><%="<span class='private'>&nbsp;&nbsp;-&nbsp;&nbsp;(仅队内可见)</span>" if post.is_private%></td>
     <td><%=h post.user.nickname %></td>
     <td><%= post.replies.size %></td>
     <td><%= post.updated_at.strftime('%Y-%m-%d %H:%M') %></td>
