--- a/app/views/match_invitations/select_host_team.html.erb
+++ b/app/views/match_invitations/select_host_team.html.erb
@@ -10,9 +10,10 @@
 <div id="wide_left_content" class="sect">
     <h2><%=h @title%></h2>
   <%if @host_teams.empty?%>
-    <br/>
-    你暂时没有其他管理的球队, 因此无法邀请<%=link_to h(@guest_team.shortname), team_view_path(@guest_team)%>进行比赛<br/><br/>
-    <%= link_to "你可以点击这里创建自己的球队", new_team_path(:back_uri=>new_match_invitation_path(:guest_team_id=>@guest_team.id))%>
+    <div class="notification">
+      你暂时没有其他管理的球队, 因此无法邀请<%=link_to h(@guest_team.shortname), team_view_path(@guest_team)%>进行比赛<br/><br/>
+      <%= link_to "你可以点击这里创建自己的球队", new_team_path(:back_uri=>new_match_invitation_path(:guest_team_id=>@guest_team.id))%>
+    </div>
   <%else%>
     
     <div class="notification">
