--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,9 +6,11 @@
 <span class="name">来自<%=link_to h(post.user.nickname), user_view_path(post.user.id) %></span>
 </span>
 
-<p>
+<div class="content">
   <%=simple_format auto_link(h(post.content), :urls) %>
-</p>
+</div>
+
+<div class="cb"></div>
 
 <%if logged_in?%>
 <div class="control">
