--- a/public/stylesheets/wefootball.css
+++ b/public/stylesheets/wefootball.css
@@ -669,6 +669,30 @@ div.result_block span.another_result {
   color: #333333;
 }
 
+div.help {
+    padding-left:5px;
+    margin-bottom: 30px;
+}
+
+div.help h1 {
+    margin: 5px 0 25px -5px;
+    font-weight: bold;
+}
+
+div.help h2 {
+    margin: 0;
+    padding: 0 5px;
+    color:#3D681A;
+}
+
+div.help p {
+    text-indent: 2em;
+}
+
+div.help a.ques {
+  line-height: 200%;
+}
+
 #footer {
     width: 990px;
     margin: 0 auto;
