--- a/app/views/shared/help.html.erb
+++ b/app/views/shared/help.html.erb
@@ -5,11 +5,11 @@
     <p>
      千里难寻是朋友，朋友多了好踢球~~<br /><br /> 
 
-     <%="&nbsp;"*8%>足球是跟哥们儿一块玩的游戏，喜欢踢球的你一定最渴望振臂一呼，应者万千的情景！wefootball正是为了这个目的而来~<br /><br /> 
+     <%="&nbsp;"*8%>足球是跟哥们儿一块玩的游戏，喜欢踢球的你一定最渴望振臂一呼，应者万千的情景！WeFootball正是为了这个目的而来~<br /><br /> 
 
      <%="&nbsp;"*8%>生活中跟你一起踢球的朋友们，只要给他们的邮箱发一个邀请，你就可以在wefootball上看到他们了。想踢球？广播一下，大家跟你走！<br /><br /> 
 
-     <%="&nbsp;"*8%>又或者你想结识wefootball上那些陌生的id，拥有更多同样热爱足球的哥们，那么你要做的仅仅是几次点击~这样，某天某块场地上，兴许你就能见到这位跟你谈论关于足球的一切的“老友”了~ <br /><br />
+     <%="&nbsp;"*8%>又或者你想结识WeFootball上那些陌生的id，拥有更多同样热爱足球的哥们，那么你要做的仅仅是几次点击~这样，某天某块场地上，兴许你就能见到这位跟你谈论关于足球的一切的“老友”了~ <br /><br />
 
      <%="&nbsp;"*8%>有了朋友，有了你爱的足球，剩下的就是享受快乐了！      
     </p>
@@ -18,11 +18,9 @@
     <p>
      突然，真的只是突然，你如此如此，这般这般，那么那么地，想踢球...<br /><br />  
 
-     <%="&nbsp;"*8%>想想读书的时候，在宿舍楼道里大吼一声，踢球的说话！立马会有无数声音回应你。但是现在，也许你坐在光鲜讲究的房间里，也许还衣衫革履，最关键的是，你独自一 
+     <%="&nbsp;"*8%>想想读书的时候，在宿舍楼道里大吼一声，踢球的说话！立马会有无数声音回应你。但是现在，也许你坐在光鲜讲究的房间里，也许还衣衫革履，最关键的是，你独自一人，怎么办？一个接一个的电话，短信“骚扰”你的球友们？呵呵...你也许只能眼睁睁看着你宝贵的休息时间，就这样一点点耗进去了...<br /><br />  
 
-     人，怎么办？一个接一个的电话，短信“骚扰”你的球友们？呵呵...你也许只能眼睁睁看着你宝贵的休息时间，就这样一点点耗进去了...<br /><br />  
-
-     <%="&nbsp;"*8%>好的，相信我，这是wefootball能为你做的为数不多的事情之一。 你只需要“随便踢踢”一下，选择好什么时候，想去哪里踢球，然后把这个消息广播出去，让wefootball上的那些跟你有着同样想法的网友们看到，之后就等着他们热情的响应吧~无论之前是否认识，踢场球，就是朋友~ <br /><br /> 
+     <%="&nbsp;"*8%>好的，相信我，这是WeFootball能为你做的为数不多的事情之一。 你只需要“随便踢踢”一下，选择好什么时候，想去哪里踢球，然后把这个消息广播出去，让wefootball上的那些跟你有着同样想法的网友们看到，之后就等着他们热情的响应吧~无论之前是否认识，踢场球，就是朋友~ <br /><br /> 
 
      <%="&nbsp;"*8%>一般来说，几个人就可以随便踢踢呢？一，二，三，四，五...相信你也会同意，这是一件很容易的事情吧？:)<br /><br /> 
       
@@ -30,12 +28,9 @@
 
     <h2>安排和记录</h2>
     <p>
-     我记得我这周踢过两次球，分别是昨天和前天，都在一体；我记得我上周踢过一次球，就在我女朋友生日前两天，在那什么地方来着；我记得我上个月...恩，大概踢过 
+     我记得我这周踢过两次球，分别是昨天和前天，都在一体；我记得我上周踢过一次球，就在我女朋友生日前两天，在那什么地方来着；我记得我上个月...恩，大概踢过几次吧...我记得我去年...算了吧... <br /><br /> 
 
-     几次吧...我记得我去年...算了吧... <br /><br /> 
-
-     <%="&nbsp;"*8%>有了wefootball，我可以把我每次踢球的各种信息都记录下来，我能够知道我一年踢过多少次球，每个月会去多少次，一般都在哪里踢，每周会在哪几天去，平均 
-踢多长时间...等等等等<br /><br />  
+     <%="&nbsp;"*8%>有了WeFootball，我可以把我每次踢球的各种信息都记录下来，我能够知道我一年踢过多少次球，每个月会去多少次，一般都在哪里踢，每周会在哪几天去，平均踢多长时间...等等等等<br /><br />  
 
      <%="&nbsp;"*8%>你会发现，这些平时你不太关注的信息，其实可以挖掘出一些非常有趣的规律~你可以以此来安排你的活动时段和活动次数，并且这些信息会成为你的另一个身份：一个经常在某个时间去某地踢球的人。  
     </p>
