--- a/app/views/shared/index.html.erb
+++ b/app/views/shared/index.html.erb
@@ -17,7 +17,7 @@
       <br/><br/>
       WeFootball<%= link_to '帮助', site_help_path%>和<%= link_to '常见问题', site_faq_path%>上线 - 04.29
       <br/><br/>
-      WeFootball上线内测 - 04.24
+      WeFootball上线试运行 - 04.24
     </div>
   </div>
 
