--- a/app/views/shared/help.html.erb
+++ b/app/views/shared/help.html.erb
@@ -7,7 +7,7 @@
 
      <%="&nbsp;"*8%>足球是跟哥们儿一块玩的游戏，喜欢踢球的你一定最渴望振臂一呼，应者万千的情景！WeFootball正是为了这个目的而来~<br /><br /> 
 
-     <%="&nbsp;"*8%>生活中跟你一起踢球的朋友们，只要给他们的邮箱发一个邀请，你就可以在wefootball上看到他们了。想踢球？广播一下，大家跟你走！<br /><br /> 
+     <%="&nbsp;"*8%>生活中跟你一起踢球的朋友们，只要给他们的邮箱发一个邀请，你就可以在WeFootball上看到他们了。想踢球？广播一下，大家跟你走！<br /><br /> 
 
      <%="&nbsp;"*8%>又或者你想结识WeFootball上那些陌生的id，拥有更多同样热爱足球的哥们，那么你要做的仅仅是几次点击~这样，某天某块场地上，兴许你就能见到这位跟你谈论关于足球的一切的“老友”了~ <br /><br />
 
@@ -20,7 +20,7 @@
 
      <%="&nbsp;"*8%>想想读书的时候，在宿舍楼道里大吼一声，踢球的说话！立马会有无数声音回应你。但是现在，也许你坐在光鲜讲究的房间里，也许还衣衫革履，最关键的是，你独自一人，怎么办？一个接一个的电话，短信“骚扰”你的球友们？呵呵...你也许只能眼睁睁看着你宝贵的休息时间，就这样一点点耗进去了...<br /><br />  
 
-     <%="&nbsp;"*8%>好的，相信我，这是WeFootball能为你做的为数不多的事情之一。 你只需要“随便踢踢”一下，选择好什么时候，想去哪里踢球，然后把这个消息广播出去，让wefootball上的那些跟你有着同样想法的网友们看到，之后就等着他们热情的响应吧~无论之前是否认识，踢场球，就是朋友~ <br /><br /> 
+     <%="&nbsp;"*8%>好的，相信我，这是WeFootball能为你做的为数不多的事情之一。 你只需要“随便踢踢”一下，选择好什么时候，想去哪里踢球，然后把这个消息广播出去，让WeFootball上的那些跟你有着同样想法的网友们看到，之后就等着他们热情的响应吧~无论之前是否认识，踢场球，就是朋友~ <br /><br /> 
 
      <%="&nbsp;"*8%>一般来说，几个人就可以随便踢踢呢？一，二，三，四，五...相信你也会同意，这是一件很容易的事情吧？:)<br /><br /> 
       
@@ -54,7 +54,7 @@
 
      <%="&nbsp;"*8%>球队的大管家可以花一小段时间为球队创建一个训练，按照大家的作息安排一个大致的时间和地点。队友们上线后就能看到，“有困难可以提”，用脚投票去或不去，方便对训练计划进行调整<br /><br /> 
 
-     <%="&nbsp;"*8%>作为本队的代表，通过wefootball可以向其他球队“约战”，在对时间地点规则等相互约定之后，一场“比赛”就诞生了~    
+     <%="&nbsp;"*8%>作为本队的代表，通过WeFootball可以向其他球队“约战”，在对时间地点规则等相互约定之后，一场“比赛”就诞生了~    
     </p>
 
     <h2>安排和记录</h2>
@@ -63,7 +63,7 @@
 
      <%="&nbsp;"*8%>本队的各种安排会在日历表中得到完整呈现，已经过去的，将来会来的，都清晰明了<br /><br />
 
-     <%="&nbsp;"*8%>在wefootball，球队某次训练结束之后，各种训练相关信息，有趣的，不那么有趣的，都可以收纳到本次训练的记录中来，完成一个类似于归档的工作<br /><br /> 
+     <%="&nbsp;"*8%>在WeFootball，球队某次训练结束之后，各种训练相关信息，有趣的，不那么有趣的，都可以收纳到本次训练的记录中来，完成一个类似于归档的工作<br /><br /> 
 
      <%="&nbsp;"*8%>同样，在一场比赛结束之后，相关讨论，比赛结果，双方阵容等等比赛中的各种信息都可以得以记录，一个球队的编年史就这样逐步建立起来了！<br /><br /> 
 
