--- a/app/views/shared/help.html.erb
+++ b/app/views/shared/help.html.erb
@@ -3,36 +3,36 @@
   <div class="sect">
     <h2>朋友</h2>
     <p>
-     千里难寻是朋友，朋友多了好踢球~~<br /><br /> 
+    千里难寻是朋友，朋友多了好踢球~~</p>
+    
+    <p>足球是跟哥们儿一块玩的游戏，喜欢踢球的你一定最渴望振臂一呼，应者万千的情景！WeFootball正是为了这个目的而来~</p>
 
-     <%="&nbsp;"*8%>足球是跟哥们儿一块玩的游戏，喜欢踢球的你一定最渴望振臂一呼，应者万千的情景！WeFootball正是为了这个目的而来~<br /><br /> 
+     <p>生活中跟你一起踢球的朋友们，只要给他们的邮箱发一个邀请，你就可以在WeFootball上看到他们了。想踢球？广播一下，大家跟你走！</p>
 
-     <%="&nbsp;"*8%>生活中跟你一起踢球的朋友们，只要给他们的邮箱发一个邀请，你就可以在WeFootball上看到他们了。想踢球？广播一下，大家跟你走！<br /><br /> 
+     <p>又或者你想结识WeFootball上那些陌生的id，拥有更多同样热爱足球的哥们，那么你要做的仅仅是几次点击~这样，某天某块场地上，兴许你就能见到这位跟你谈论关于足球的一切的“老友”了~ <br /><br />
 
-     <%="&nbsp;"*8%>又或者你想结识WeFootball上那些陌生的id，拥有更多同样热爱足球的哥们，那么你要做的仅仅是几次点击~这样，某天某块场地上，兴许你就能见到这位跟你谈论关于足球的一切的“老友”了~ <br /><br />
-
-     <%="&nbsp;"*8%>有了朋友，有了你爱的足球，剩下的就是享受快乐了！      
+     <p>有了朋友，有了你爱的足球，剩下的就是享受快乐了！      
     </p>
 
     <h2>随便踢踢</h2>
     <p>
-     突然，真的只是突然，你如此如此，这般这般，那么那么地，想踢球...<br /><br />  
+     突然，真的只是突然，你如此如此，这般这般，那么那么地，想踢球...</p> 
 
-     <%="&nbsp;"*8%>想想读书的时候，在宿舍楼道里大吼一声，踢球的说话！立马会有无数声音回应你。但是现在，也许你坐在光鲜讲究的房间里，也许还衣衫革履，最关键的是，你独自一人，怎么办？一个接一个的电话，短信“骚扰”你的球友们？呵呵...你也许只能眼睁睁看着你宝贵的休息时间，就这样一点点耗进去了...<br /><br />  
+     <p>想想读书的时候，在宿舍楼道里大吼一声，踢球的说话！立马会有无数声音回应你。但是现在，也许你坐在光鲜讲究的房间里，也许还衣衫革履，最关键的是，你独自一人，怎么办？一个接一个的电话，短信“骚扰”你的球友们？呵呵...你也许只能眼睁睁看着你宝贵的休息时间，就这样一点点耗进去了...</p> 
 
-     <%="&nbsp;"*8%>好的，相信我，这是WeFootball能为你做的为数不多的事情之一。 你只需要“随便踢踢”一下，选择好什么时候，想去哪里踢球，然后把这个消息广播出去，让WeFootball上的那些跟你有着同样想法的网友们看到，之后就等着他们热情的响应吧~无论之前是否认识，踢场球，就是朋友~ <br /><br /> 
+     <p>好的，相信我，这是WeFootball能为你做的为数不多的事情之一。 你只需要“随便踢踢”一下，选择好什么时候，想去哪里踢球，然后把这个消息广播出去，让WeFootball上的那些跟你有着同样想法的网友们看到，之后就等着他们热情的响应吧~无论之前是否认识，踢场球，就是朋友~ </p>
 
-     <%="&nbsp;"*8%>一般来说，几个人就可以随便踢踢呢？一，二，三，四，五...相信你也会同意，这是一件很容易的事情吧？:)<br /><br /> 
+     <p>一般来说，几个人就可以随便踢踢呢？一，二，三，四，五...相信你也会同意，这是一件很容易的事情吧？:)</p>
       
     </p>
 
     <h2>安排和记录</h2>
     <p>
-     我记得我这周踢过两次球，分别是昨天和前天，都在一体；我记得我上周踢过一次球，就在我女朋友生日前两天，在那什么地方来着；我记得我上个月...恩，大概踢过几次吧...我记得我去年...算了吧... <br /><br /> 
+     我记得我这周踢过两次球，分别是昨天和前天，都在一体；我记得我上周踢过一次球，就在我女朋友生日前两天，在那什么地方来着；我记得我上个月...恩，大概踢过几次吧...我记得我去年...算了吧... </p>
 
-     <%="&nbsp;"*8%>有了WeFootball，我可以把我每次踢球的各种信息都记录下来，我能够知道我一年踢过多少次球，每个月会去多少次，一般都在哪里踢，每周会在哪几天去，平均踢多长时间...等等等等<br /><br />  
+     <p>有了WeFootball，我可以把我每次踢球的各种信息都记录下来，我能够知道我一年踢过多少次球，每个月会去多少次，一般都在哪里踢，每周会在哪几天去，平均踢多长时间...等等等等</p> 
 
-     <%="&nbsp;"*8%>你会发现，这些平时你不太关注的信息，其实可以挖掘出一些非常有趣的规律~你可以以此来安排你的活动时段和活动次数，并且这些信息会成为你的另一个身份：一个经常在某个时间去某地踢球的人。  
+     <p>你会发现，这些平时你不太关注的信息，其实可以挖掘出一些非常有趣的规律~你可以以此来安排你的活动时段和活动次数，并且这些信息会成为你的另一个身份：一个经常在某个时间去某地踢球的人。  
     </p>
   </div>
 
@@ -40,34 +40,34 @@
   <div class="sect">
     <h2>球队</h2>
     <p>
-     “我连班队都没参加过，怎么办...”<br /><br />  
+     “我连班队都没参加过，怎么办...”</p> 
 
-     <%="&nbsp;"*8%>呵呵，这个词没那么严格了，实际上你们经常一块踢球的小团体就是一个球队了~相信你也会同意这个概念的吧~<br /><br />  
+     <p>呵呵，这个词没那么严格了，实际上你们经常一块踢球的小团体就是一个球队了~相信你也会同意这个概念的吧~</p> 
 
-     <%="&nbsp;"*8%>有兄弟，才足球
+     <p>有兄弟，才足球
       
     </p>
 
     <h2>训练、比赛和约战</h2>
     <p>
-     要玩就玩专业的！有了球队，就要训练，就要跟别人比赛，就要接受挑战！<br /><br /> 
+     要玩就玩专业的！有了球队，就要训练，就要跟别人比赛，就要接受挑战！</p>
 
-     <%="&nbsp;"*8%>球队的大管家可以花一小段时间为球队创建一个训练，按照大家的作息安排一个大致的时间和地点。队友们上线后就能看到，“有困难可以提”，用脚投票去或不去，方便对训练计划进行调整<br /><br /> 
+     <p>球队的大管家可以花一小段时间为球队创建一个训练，按照大家的作息安排一个大致的时间和地点。队友们上线后就能看到，“有困难可以提”，用脚投票去或不去，方便对训练计划进行调整</p>
 
-     <%="&nbsp;"*8%>作为本队的代表，通过WeFootball可以向其他球队“约战”，在对时间地点规则等相互约定之后，一场“比赛”就诞生了~    
+     <p>作为本队的代表，通过WeFootball可以向其他球队“约战”，在对时间地点规则等相互约定之后，一场“比赛”就诞生了~    
     </p>
 
     <h2>安排和记录</h2>
     <p>
-     对于一个球队来说，要记录的东西真的很多，比如训练，比如比赛，比如那些可爱的人儿~<br /><br /> 
+     对于一个球队来说，要记录的东西真的很多，比如训练，比如比赛，比如那些可爱的人儿~</p>
 
-     <%="&nbsp;"*8%>本队的各种安排会在日历表中得到完整呈现，已经过去的，将来会来的，都清晰明了<br /><br />
+     <p>本队的各种安排会在日历表中得到完整呈现，已经过去的，将来会来的，都清晰明了<br /><br />
 
-     <%="&nbsp;"*8%>在WeFootball，球队某次训练结束之后，各种训练相关信息，有趣的，不那么有趣的，都可以收纳到本次训练的记录中来，完成一个类似于归档的工作<br /><br /> 
+     <p>在WeFootball，球队某次训练结束之后，各种训练相关信息，有趣的，不那么有趣的，都可以收纳到本次训练的记录中来，完成一个类似于归档的工作</p>
 
-     <%="&nbsp;"*8%>同样，在一场比赛结束之后，相关讨论，比赛结果，双方阵容等等比赛中的各种信息都可以得以记录，一个球队的编年史就这样逐步建立起来了！<br /><br /> 
+     <p>同样，在一场比赛结束之后，相关讨论，比赛结果，双方阵容等等比赛中的各种信息都可以得以记录，一个球队的编年史就这样逐步建立起来了！</p>
 
-     <%="&nbsp;"*8%>这样，当我们“回望长安”的时候，会发现，一切都在那里
+     <p>这样，当我们“回望长安”的时候，会发现，一切都在那里
   
     </p>
   </div>
