--- a/app/views/shared/index.html.erb
+++ b/app/views/shared/index.html.erb
@@ -15,6 +15,8 @@
     <div class="notification">
       <%= link_to '了解一下WeFootball能做些什么？', site_help_path%>
       <br/><br/>
+      WeFootball预告: 广播功能计划于下周上线 - 05.03
+      <br/><br/>
       WeFootball<%= link_to '帮助', site_help_path%>和<%= link_to '常见问题', site_faq_path%>上线 - 04.29
       <br/><br/>
       WeFootball上线试运行 - 04.24
