--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
   © 2008 WeFootball.org, All Rights Reserved
   </span>
   <span class="links">
-  <%= link_to '帮助', site_help_path %>&nbsp;&nbsp;|&nbsp;&nbsp;
+  <%= link_to '关于我们', site_about_path %>&nbsp;&nbsp;|&nbsp;&nbsp;
   <%= link_to '站务论坛', site_posts_path %>&nbsp;&nbsp;|&nbsp;&nbsp;
   <a href="http://blog.wefootball.org">Blog</a>&nbsp;&nbsp;|&nbsp;&nbsp;
   <a href="#">隐私声明</a>
