--- a/app/views/shared/index.html.erb
+++ b/app/views/shared/index.html.erb
@@ -13,13 +13,15 @@
   <div class="sect">
     <h2>WeFootball公告</h2>    
     <div class="notification">
-      <%= link_to '了解一下WeFootball能做些什么？', site_help_path%>
+      <%= link_to '了解一下WeFootball能做些什么？', site_about_path%>
       <br/><br/>
       WeFootball预告: 广播功能计划于下周上线 - 05.03
       <br/><br/>
-      WeFootball<%= link_to '帮助', site_help_path%>和<%= link_to '常见问题', site_faq_path%>上线 - 04.29
+      WeFootball<%= link_to '关于我们', site_about_path%>和<%= link_to '常见问题', site_faq_path%>上线 - 04.29
       <br/><br/>
       WeFootball上线试运行 - 04.24
+      <br/><br/>
+      要给WeFootball提提建议？ 请到<%= link_to '站务论坛', site_posts_path%>留言
     </div>
   </div>
 
