--- a/app/views/shared/_help_sidebar_menu.html.erb
+++ b/app/views/shared/_help_sidebar_menu.html.erb
@@ -1,6 +1,6 @@
 <ul class="sidebar_menu">
-  <li <%= selected_class_sidebar_menu_item(:action=>'help', :controller=>'application')%>>
-    > <%= link_to "帮助", site_help_path %>
+  <li <%= selected_class_sidebar_menu_item(:action=>'about', :controller=>'application')%>>
+    > <%= link_to "关于我们", site_about_path %>
   </li>  
   <li <%= selected_class_sidebar_menu_item(:action=>'faq', :controller=>'application')%>>
     > <%= link_to "常见问题", site_faq_path %>
