--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
 <div id="wide_left_content" class="sect">
   <h2><%=h @title%></h2>
   <%=render :partial=>'post_list', :object=>@posts%>
+  <%= will_paginate @posts %>
 </div>
 
 <div id="narrow_right_content" class="sect">
