--- a/app/views/team_join_requests/index_user.html.erb
+++ b/app/views/team_join_requests/index_user.html.erb
@@ -26,7 +26,8 @@
         </td>
       </tr>
     <% end %>
-  </table> 
+  </table>
+  <%= will_paginate @requests %>
 </div>
 
 <div id="narrow_right_content" class="sect">
