--- a/app/views/team_joins/index_user.html.erb
+++ b/app/views/team_joins/index_user.html.erb
@@ -4,22 +4,25 @@
 </div>
 
 <div id="wide_left_content">
-  <div class="sect">
-    <h2>管理员</h2>
-    <%= user_icon(@admin)%>
-    <div class="cb"></div>
-  </div>
+  <%if @others.current_page == 1%>
+    <div class="sect">
+      <h2>管理员</h2>
+      <%= user_icon(@admin)%>
+      <div class="cb"></div>
+    </div>
 
-  <div class="sect">
-    <h2>队员</h2>
-    <%= user_icon(@players)%>
-    <div class="cb"></div>
-  </div>
+    <div class="sect">
+      <h2>队员</h2>
+      <%= user_icon(@players)%>
+      <div class="cb"></div>
+    </div>
+  <%end%>
 
   <div class="sect">
     <h2>其他成员</h2>
     <%= user_icon(@others)%>
     <div class="cb"></div>
+    <%= will_paginate @others %>
   </div>
 </div>
 
