--- a/app/views/plays/players.html.erb
+++ b/app/views/plays/players.html.erb
@@ -1,6 +1,8 @@
 <div id="wide_left_content" class="sect">
   <h2><%=h(@title)%></h2>
   <%= user_icon(@players)%>
+  <div class="cb"></div>
+  <%= will_paginate @players %>
 </div>
 
 <div id="narrow_right_content" class="sect">
